vbnc/vbnc/tests/Errors/42024.vb
Option Strict Off

Class T
    Function A()
        Return Nothing
    End Function
End Class